--- a/DashBoardDB/MainWindow.xaml
+++ b/DashBoardDB/MainWindow.xaml
@@ -150,7 +150,7 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="Orders# Today:" TextWrapping="Wrap" FontFamily="fonts/#Dosis" FontSize="17" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom"
                            Foreground="white"/>
-                <Label x:Name="OrdersToday" Content="1523" FontFamily="fonts/#Dosis" FontSize="25" HorizontalAlignment="Center" Margin="0,32,0,8" Grid.RowSpan="2" Foreground="white"/>
+                <TextBlock x:Name="OrdersToday" Text="1523" FontFamily="fonts/#Dosis" FontSize="25" HorizontalAlignment="Center" Margin="0,32,0,8" Grid.RowSpan="2" Foreground="white"/>
                 <Image Name="orderimg" Height="76" Grid.RowSpan="2" Width="100" Source="/images/app-icon-sales-order.png" Grid.Column="1" HorizontalAlignment="Left" Stretch="Uniform"/>
 
             </Grid>
@@ -164,7 +164,7 @@
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="Profit Today:" TextWrapping="Wrap" FontFamily="fonts/#Dosis" FontSize="18" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Foreground="white"/>
-                <Label x:Name="ProfitToday" Content="1523$" FontFamily="fonts/#Dosis" FontSize="25" HorizontalAlignment="Center" Margin="0,32,0,8" Grid.RowSpan="2" Foreground="white"/>
+                <TextBlock x:Name="ProfitToday" Text="1523$" FontFamily="fonts/#Dosis" FontSize="25" HorizontalAlignment="Center" Margin="0,32,0,8" Grid.RowSpan="2" Foreground="white"/>
                 <Image Name="orderimg1" Height="76" Grid.RowSpan="2" Width="100" Source="/images/profits.png" Grid.Column="1" HorizontalAlignment="Left"/>
             </Grid>
             <TextBlock Text="Profit by product type" TextWrapping="Wrap" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="35" Foreground="White"
