--- a/DashBoardDB/AddRemoveEdIt.xaml
+++ b/DashBoardDB/AddRemoveEdIt.xaml
@@ -271,7 +271,12 @@
                 </Grid.RowDefinitions>
                 <ComboBox Name="EditType" Width="250" Height="30" VerticalAlignment="Top" FontFamily="fonts/#Dosis" BorderBrush="{x:Null}" SelectionChanged="EditType_SelectionChanged">
                 </ComboBox>
-                <TextBox Name="productnamebox" Text="" TextWrapping="Wrap" MaxHeight="30" MaxWidth="250" Margin="-1,38,1,9" Grid.RowSpan="2"  FontSize="20" FontFamily="fonts/#Dosis" KeyDown="Enter_KeyDown"/>
+                <TextBlock Name="OrderProductNameBlock" IsEnabled="False" Visibility="Hidden" Text="Name:" Margin="62,0,-62,26" FontSize="15" FontFamily="fonts/#Dosis" Foreground="White" Height="25" Grid.Row="1"/>
+                <TextBox Name="OrderProductNameBox" IsEnabled="False" Visibility="Hidden" Grid.Row="1" MaxHeight="30" MaxWidth="175" Background="White" Margin="-108,6,108,45" Grid.RowSpan="2" FontSize="20" FontFamily="fonts/#Dosis" KeyDown="Enter_KeyDown"></TextBox>
+                <TextBlock Name="OrderProductQuantityBlock" IsEnabled="False" Visibility="Hidden" Text="Quantity:" Margin="268,50,-268,27" FontSize="15" FontFamily="fonts/#Dosis" Foreground="White" Height="25" Grid.RowSpan="2"/>
+                <TextBox Name="OrderProductQuantityBox" IsEnabled="False" Visibility="Hidden" Grid.Row="1" MaxHeight="30" MaxWidth="175" Background="White" Margin="97,6,-97,45" Grid.RowSpan="2" FontSize="20" FontFamily="fonts/#Dosis" KeyDown="Enter_KeyDown" PreviewTextInput="missingorderquantitybox_PreviewTextInput"></TextBox>
+                <TextBox Name="productnamebox" Text="" TextWrapping="Wrap" MaxHeight="30" MaxWidth="250" Margin="-1,38,1,9" Grid.RowSpan="2"  FontSize="20" FontFamily="fonts/#Dosis"/>
+
                 <TextBlock Grid.Row="1" Name="productnameblock" Text="Name:" TextWrapping="Wrap" Margin="26,2,290,20" FontSize="15" FontFamily="fonts/#Dosis" Foreground="White" Height="25" />
                 <TextBlock Grid.Row="2" Name="ProductTypeBlock" Text="Type:" TextWrapping="Wrap" Margin="26,2,290,20" FontSize="15" FontFamily="fonts/#Dosis" Foreground="White" Height="25" />
                 <ComboBox Grid.Row="2" Name="TypeBox" Width="250" Height="30" VerticalAlignment="Top" FontFamily="fonts/#Dosis" BorderBrush="{x:Null}" IsEditable="True">
@@ -279,9 +284,20 @@
                 <TextBlock Grid.Row="3" Name="productogpriceblock" Text="Orignal price:" TextWrapping="Wrap" Margin="2,5,318,17" FontSize="13" FontFamily="fonts/#Dosis" Foreground="White"/>
                 <TextBox Name="productojbricebox" Text="" TextWrapping="Wrap" MaxHeight="30" MaxWidth="250" Margin="-1,38,1,9" Grid.RowSpan="2" Grid.Row="2" PreviewTextInput="quantitybox_PreviewTextInput" FontSize="20" FontFamily="fonts/#Dosis"/>
                 <TextBox Name="productpfbricebox" Text="" TextWrapping="Wrap" MaxHeight="30" MaxWidth="250" Margin="-1,38,1,9" Grid.RowSpan="2" Grid.Row="3" PreviewTextInput="quantitybox_PreviewTextInput" FontSize="20" FontFamily="fonts/#Dosis" TextChanged="productpfbricebox_TextChanged" />
-                <ScrollViewer Name="ScrollBar" Grid.Row="2" Grid.RowSpan="4" Visibility="Hidden" IsEnabled="False">
-                    <TextBlock Name="AddProductToOrderBlock" Text="Press Enter to add the product you want" Grid.Row="2" Grid.RowSpan="4" HorizontalAlignment="Center" Visibility="Hidden" FontFamily="fonts/#Dosis" FontSize="20" Foreground="White"></TextBlock>
-                </ScrollViewer>
+                <TextBlock Name="AddProductToOrderBlock" Text="" Grid.Row="2" Grid.RowSpan="4" HorizontalAlignment="Center" Visibility="Hidden" FontFamily="fonts/#Dosis" FontSize="20" Foreground="White">Press Enter to add the product you want</TextBlock>
+                <Grid Name="MissingOrderGrid" Grid.Row="3" Grid.RowSpan="4" IsEnabled="False">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <ScrollViewer Name="ScrollBar" Grid.ColumnSpan="2" Visibility="Hidden" IsEnabled="False">
+                        <TextBox Name="ProductNameAndQuantityBlock" Grid.ColumnSpan="2" Visibility="Hidden" 
+                                 FontFamily="fonts/#Dosis" FontSize="20" Background="{x:Null}"  
+                                  Text="     Product:                                            Quantity:   "  Foreground="White "></TextBox>
+
+                    </ScrollViewer>
+                </Grid>
+
                 <TextBlock Grid.Row="4" Name="productpfpriceblock" Text="Profit price:" TextWrapping="Wrap" Margin="2,4,318,18" FontSize="15" FontFamily="fonts/#Dosis" Foreground="White"/>
                 <TextBlock Grid.Row="5" Name="expdateblock" Text="Exp date:" TextWrapping="Wrap" Margin="14,5,306,17" FontSize="15" FontFamily="fonts/#Dosis" Foreground="White"/>
                 <DatePicker  Name="expdatepciker" FontFamily="fonts/#Dosis" MaxHeight="30" MaxWidth="250" Margin="-2,42,2,5" Grid.RowSpan="2" Grid.Row="4" BorderBrush="{x:Null}"/>
