Finshed Adding MissingOrder functions finally , complated insertOrder , GetProductInfo functions in manageDB , some change to AddRemoveEdit window design for easier management , fixed a bug where app would crush if the user left any textbox empty in add or remove anything

--- a/DashBoardDB/AddRemoveEdIt.xaml
+++ b/DashBoardDB/AddRemoveEdIt.xaml
@@ -285,7 +285,7 @@
                 <TextBox Name="productojbricebox" Text="" TextWrapping="Wrap" MaxHeight="30" MaxWidth="250" Margin="-1,38,1,9" Grid.RowSpan="2" Grid.Row="2" PreviewTextInput="quantitybox_PreviewTextInput" FontSize="20" FontFamily="fonts/#Dosis"/>
                 <TextBox Name="productpfbricebox" Text="" TextWrapping="Wrap" MaxHeight="30" MaxWidth="250" Margin="-1,38,1,9" Grid.RowSpan="2" Grid.Row="3" PreviewTextInput="quantitybox_PreviewTextInput" FontSize="20" FontFamily="fonts/#Dosis" TextChanged="productpfbricebox_TextChanged" />
                 <TextBlock Name="AddProductToOrderBlock" Text="" Grid.Row="2" Grid.RowSpan="4" HorizontalAlignment="Center" Visibility="Hidden" FontFamily="fonts/#Dosis" FontSize="20" Foreground="White">Press Enter to add the product you want</TextBlock>
-                <Grid Name="MissingOrderGrid" Grid.Row="3" Grid.RowSpan="4" IsEnabled="False">
+                <Grid Name="MissingOrderGrid" Grid.Row="3" Grid.RowSpan="3" IsEnabled="False">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
@@ -294,20 +294,19 @@
                         <TextBox Name="ProductNameAndQuantityBlock" Grid.ColumnSpan="2" Visibility="Hidden" 
                                  FontFamily="fonts/#Dosis" FontSize="20" Background="{x:Null}"  
                                   Text="     Product:                                            Quantity:   "  Foreground="White "></TextBox>
-
                     </ScrollViewer>
                 </Grid>
 
                 <TextBlock Grid.Row="4" Name="productpfpriceblock" Text="Profit price:" TextWrapping="Wrap" Margin="2,4,318,18" FontSize="15" FontFamily="fonts/#Dosis" Foreground="White"/>
-                <TextBlock Grid.Row="5" Name="expdateblock" Text="Exp date:" TextWrapping="Wrap" Margin="14,5,306,17" FontSize="15" FontFamily="fonts/#Dosis" Foreground="White"/>
-                <DatePicker  Name="expdatepciker" FontFamily="fonts/#Dosis" MaxHeight="30" MaxWidth="250" Margin="-2,42,2,5" Grid.RowSpan="2" Grid.Row="4" BorderBrush="{x:Null}"/>
-                <TextBlock Grid.Row="6" Name="companyblock" Text="Manufacturer:" TextWrapping="Wrap" Margin="2,6,318,16" FontSize="13" FontFamily="fonts/#Dosis" Foreground="White"/>
-                <ComboBox Grid.Row="6" Name="CompanyBox" Width="250" Height="30" VerticalAlignment="Top" FontFamily="fonts/#Dosis" BorderBrush="{x:Null}" IsEditable="True">
+                <TextBlock Grid.Row="7" Name="expdateblock" Text="Exp date:" TextWrapping="Wrap" Margin="14,5,306,17" FontSize="15" FontFamily="fonts/#Dosis" Foreground="White"/>
+                <DatePicker  Name="expdatepciker" FontFamily="fonts/#Dosis" MaxHeight="30" MaxWidth="250" Margin="-2,42,2,5" Grid.RowSpan="2" Grid.Row="6" BorderBrush="{x:Null}" SelectedDateFormat="Short"/>
+                <TextBlock Grid.Row="5" Name="companyblock" Text="Manufacturer:" TextWrapping="Wrap" Margin="2,6,318,16" FontSize="13" FontFamily="fonts/#Dosis" Foreground="White"/>
+                <ComboBox Grid.Row="5" Name="CompanyBox" Width="250" Height="30" VerticalAlignment="Top" FontFamily="fonts/#Dosis" BorderBrush="{x:Null}" IsEditable="True">
                 </ComboBox>
                 <TextBlock Grid.Row="6" Name="PhoneNumber" Text="Phone Number:" TextWrapping="Wrap" Margin="4,7,316,15" FontSize="11" FontFamily="fonts/#Dosis" Foreground="White" Visibility="Hidden" />
                 <TextBox Name="PhoneNumbox" Text="" TextWrapping="Wrap" MaxHeight="30" MaxWidth="250" Margin="-1,38,1,9" Grid.RowSpan="2" Grid.Row="5"  FontSize="20" FontFamily="fonts/#Dosis" Visibility="Hidden" PreviewTextInput="PhoneNumber_PreviewTextInput"/>
-                <TextBlock Grid.Row="7" Name="quantityblock" Text="Quantity:" TextWrapping="Wrap" Margin="16,5,304,17" FontSize="15" FontFamily="fonts/#Dosis" Foreground="White"/>
-                <TextBox Name="quantitybox" Text="" TextWrapping="Wrap" MaxHeight="30" MaxWidth="250" Margin="-1,38,1,9" Grid.RowSpan="2" Grid.Row="6"  PreviewTextInput="quantitybox_PreviewTextInput" FontSize="20" FontFamily="fonts/#Dosis"/>
+                <TextBlock Grid.Row="6" Name="quantityblock" Text="Quantity:" TextWrapping="Wrap" Margin="16,5,304,17" FontSize="15" FontFamily="fonts/#Dosis" Foreground="White"/>
+                <TextBox Name="quantitybox" Text="" TextWrapping="Wrap" MaxHeight="30" MaxWidth="250" Margin="-1,38,1,9" Grid.RowSpan="2" Grid.Row="5"  PreviewTextInput="quantitybox_PreviewTextInput" FontSize="20" FontFamily="fonts/#Dosis"/>
             </Grid>
             <Button Style="{DynamicResource RoundedButton}" Name="Confirm" Content="Confirm" FontSize="20" Background="#FE6584" FontFamily="fonts/#Dosis" MaxHeight="30" MaxWidth="150" Grid.Row="3" Click="Confirm_Click"/>
         </Grid>
