--- a/DashBoardDB/MainWindow.xaml
+++ b/DashBoardDB/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.WPF;assembly=LiveChartsCore.SkiaSharpView.WPF"
         xmlns:local="clr-namespace:DashBoardDB"
         mc:Ignorable="d"
-        Title="MainWindow" Height="900" Width="1200"
+        Title="MainWindow"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
@@ -26,7 +26,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-      
+
         <Style x:Key="FocusVisual">
             <Setter Property="Control.Template">
                 <Setter.Value>
@@ -87,30 +87,29 @@
     <Window.DataContext>
         <local:Allviews/>
     </Window.DataContext>
-    <Grid>
+    <Grid Name="MainGrid">
         <Grid.RowDefinitions>
-            <RowDefinition Height="30">
+            <RowDefinition Height="AUTO">
             </RowDefinition>
-            <RowDefinition Height="560">
+            <RowDefinition Height="AUTO">
             </RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="474">
+            <ColumnDefinition Width="AUTO">
             </ColumnDefinition>
-            <ColumnDefinition Width="500"></ColumnDefinition>
-            <ColumnDefinition ></ColumnDefinition>
+            <ColumnDefinition Width="AUTO"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid Background="#0F0F2D" Grid.ColumnSpan="3" Grid.Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition   Width="83*">
+                <ColumnDefinition  Width="Auto">
                 </ColumnDefinition>
-                <ColumnDefinition Width="80*"/>
-                <ColumnDefinition Width="237*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <TextBlock Text="DashBoard" TextWrapping="Wrap" Grid.ColumnSpan="2" Margin="24,5,136,-5" FontFamily="Bookman Old Style" FontWeight="Bold" FontSize="18" Foreground="White"/>
             <TextBlock x:Name="helper" Text="" TextWrapping="Wrap" IsEnabled="True"/>
-            <Button   Style="{DynamicResource RoundedButton}" Name="Exitbt" Content="Exit" Background="#FE6584" FontFamily="fonts/#Dosis" Click="exit_Click" HorizontalAlignment="Left" Grid.Column="2" Margin="539,3,0,4" MaxWidth="154" Width="154"/>
+            <Button   Style="{DynamicResource RoundedButton}" Name="Exitbt" Content="Exit" Background="#FE6584" FontFamily="fonts/#Dosis" Click="exit_Click" HorizontalAlignment="Right" Grid.Column="1" MinHeight="20" MinWidth="150"/>
             <MenuItem Style="{DynamicResource NoGlowMenuItem}" Click="MenuClick" x:Name="MenuClickN" Margin="98,6,35,-6" Foreground="White" FontFamily="Bookman Old Style" FontSize="13" BorderBrush="{x:Null}">
                 <MenuItem.Header>
                     <StackPanel Orientation="Horizontal">
@@ -128,16 +127,16 @@
         </Grid>
         <Grid Grid.Row="1" Background="#FF181735">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="446*"/>
-                <ColumnDefinition Width="29*"/>
+                <ColumnDefinition Width="AUTO"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition>
                 </RowDefinition>
                 <RowDefinition></RowDefinition>
-                <RowDefinition Height="400"></RowDefinition>
+                <RowDefinition Height="100"></RowDefinition>
             </Grid.RowDefinitions>
-            <Grid Grid.Row="0" Background="#0F0F2D" Width="200" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+            <Grid Grid.Row="0" Background="#0F0F2D" Width="AUTO" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="9,0,0,8">
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
@@ -146,10 +145,10 @@
                     <ColumnDefinition Width="120"></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="Orders# Today:" TextWrapping="Wrap" FontFamily="fonts/#Dosis" FontSize="17" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom"
-                           Foreground="white"/>
+                <TextBlock Text="Orders# Today:" TextWrapping="Wrap" FontFamily="fonts/#Dosis" FontSize="17" HorizontalAlignment="Center" VerticalAlignment="Top"
+                           Foreground="white" Margin="0,11,0,0"/>
                 <TextBlock x:Name="OrdersToday" Text="1523" FontFamily="fonts/#Dosis" FontSize="25" HorizontalAlignment="Center" Margin="0,32,0,8" Grid.RowSpan="2" Foreground="white"/>
-                <Image Name="orderimg" Height="76" Grid.RowSpan="2" Width="100" Source="/images/app-icon-sales-order.png" Grid.Column="1" HorizontalAlignment="Left" Stretch="Uniform"/>
+                <Image Name="orderimg" Height="76" Grid.RowSpan="2" Width="AUTO" Source="/images/app-icon-sales-order.png" Grid.Column="1" HorizontalAlignment="Left" Stretch="Uniform"/>
 
             </Grid>
             <Grid Grid.Row="0" Background="#0F0F2D" Width="200" HorizontalAlignment="Left" Margin="236,0,0,0">
@@ -158,26 +157,25 @@
                     <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="120"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="Profit Today:" TextWrapping="Wrap" FontFamily="fonts/#Dosis" FontSize="18" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Foreground="white"/>
+                <TextBlock Text="Profit Today:" TextWrapping="Wrap" FontFamily="fonts/#Dosis" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="white" Margin="0,13,0,0"/>
                 <TextBlock x:Name="ProfitToday" Text="1523$" FontFamily="fonts/#Dosis" FontSize="25" HorizontalAlignment="Center" Margin="0,32,0,8" Grid.RowSpan="2" Foreground="white"/>
-                <Image Name="orderimg1" Height="76" Grid.RowSpan="2" Width="100" Source="/images/profits.png" Grid.Column="1" HorizontalAlignment="Left"/>
+                <Image Name="orderimg1" Height="AUTO" Grid.RowSpan="2" Width="AUTO" Source="/images/profits.png" Grid.Column="1" HorizontalAlignment="Left" Margin="20,2,0,2"/>
             </Grid>
-            <TextBlock Text="Profit by product type" TextWrapping="Wrap" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="35" Foreground="White"
+            <TextBlock Text="Profit by product type" TextWrapping="Wrap" Grid.Row="1" HorizontalAlignment="Center"  FontSize="35" Foreground="White"
                        FontFamily="fonts/#Dosis"/>
             <lvc:PieChart 
-                 
-                 Grid.Row="2" 
+                 Grid.Row="1" 
                  Name="Pie"
                  tz:Transitionz.Opacity="{tz:OpacityParams From=0, To=1, Duration=200, TransitionOn=Visibility}"
                  tz:Transitionz.Translate="{tz:TranslateParams From='10,0', To='0,0', Duration=200, TransitionOn=Visibility}"
-                 tz:Transitionz.Visibility="{Binding ElementName=helper, Path=IsEnabled, Converter={StaticResource b2vc}}"/>
+                 tz:Transitionz.Visibility="{Binding ElementName=helper, Path=IsEnabled, Converter={StaticResource b2vc}}" Margin="2,36,-2,8" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
         </Grid>
         <Grid Background="#181735" Grid.Column="1" Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="60"></ColumnDefinition>
+                <ColumnDefinition Width="AUTO"></ColumnDefinition>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="Profit last 10 days" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="38" Foreground="White" FontFamily="fonts/#Dosis">
@@ -193,7 +191,6 @@
                 Series="{Binding Path=Viewmodelx.SeriesCollection}"
                 TooltipPosition="Top"
                 Grid.Column="1"
-                Width="440"
                 ZoomMode="X"
                 tz:Transitionz.Opacity="{tz:OpacityParams From=0, To=1, Duration=200, TransitionOn=Visibility}"
                 tz:Transitionz.Translate="{tz:TranslateParams From='10,0', To='0,0', Duration=200, TransitionOn=Visibility}"
@@ -203,8 +200,8 @@
         </Grid>
         <Grid Grid.Row="2" Grid.ColumnSpan="2" Background="#181735">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="5"></ColumnDefinition>
-                <ColumnDefinition Width="250"></ColumnDefinition>
+                <ColumnDefinition Width="AUTO"></ColumnDefinition>
+                <ColumnDefinition Width="AUTO"></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -214,30 +211,60 @@
             <Grid Grid.Row="0" Grid.ColumnSpan="3" Background="White"></Grid>
             <Grid Grid.Column="1" Grid.Row="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="40"></RowDefinition>
+                    <RowDefinition Height="AUTO"></RowDefinition>
                     <RowDefinition></RowDefinition>
                     <RowDefinition Height="10"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0">
                     <TextBlock Text="Total Counter:" TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" FontFamily="fonts/#Dosis" Foreground="White"/>
                 </Grid>
-                <Grid Grid.Row="1" Background="#201f3e">
+                <Grid Grid.Row="1" Background="#201f3e" Margin="5,0,-5,10" Grid.RowSpan="2">
                     <Grid.RowDefinitions>
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
                     </Grid.RowDefinitions>
-                    <Image Source="/images/products.png" Width="80" Height="70" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,8,0,0"></Image>
-                    <TextBlock Text="Total Products:" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="22" FontFamily="fonts/#Dosis" Foreground="White" Margin="84,10,0,0" Height="37" Width="128"/>
-                    <TextBlock Name="TotalProducts" TextAlignment="Center" Text="1532" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="30" FontFamily="fonts/#Dosis" Foreground="White" Margin="84,0,0,13" Height="37" Width="128"/>
-                    <Grid VerticalAlignment="Bottom" Height="1" Background="White" Width="240"></Grid>
-                    <Image Grid.Row="1" Source="/images/PikPng.com_business-icon-png_660381.png" Width="80" Height="70" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,8,0,0"></Image>
-                    <TextBlock Grid.Row="1" Text="Total Companies:" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="22" FontFamily="fonts/#Dosis" Foreground="White" Margin="84,10,0,0" Height="37" Width="163"/>
-                    <TextBlock Grid.Row="1" Name="TotalCompanies" TextAlignment="Center" Text="1532" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="30" FontFamily="fonts/#Dosis" Foreground="White" Margin="84,0,0,13" Height="37" Width="128"/>
-                    <Grid Grid.Row="1" VerticalAlignment="Bottom" Height="1" Background="White" Width="240"></Grid>
-                    <TextBlock Grid.Row="2" Text="Total Profit  (7 days):" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" FontFamily="fonts/#Dosis" Foreground="White" Margin="85,16,0,0" Height="37" Width="168"/>
-                    <TextBlock Grid.Row="2" Name="TotalProfits" TextAlignment="Center" Text="1532" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="30" FontFamily="fonts/#Dosis" Foreground="White" Margin="84,0,0,13" Height="37" Width="128"/>
-                    <Image Grid.Row="2" Source="/images/profits (1).png" Width="80" Height="70" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,8,0,0"></Image>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="AUTO"  ></ColumnDefinition>
+                            <ColumnDefinition Width="AUTO" ></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <Image Name="PordouctIMG" Source="/images/products.png" Height="70" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,2,0,0" Grid.RowSpan="2"></Image>
+                        <TextBlock Grid.Column="1" Text="Total Products:" TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20" FontFamily="fonts/#Dosis" Foreground="White" Height="AUTO" Width="AUTO"/>
+                        <TextBlock Grid.Column="1" Grid.Row="1" Name="TotalProducts" TextAlignment="Center" Text="1532" TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="30" FontFamily="fonts/#Dosis" Foreground="White" Margin="3,2,0,0" Height="AUTO" Width="128"/>
+                    </Grid>
+                    <Grid VerticalAlignment="Bottom" Height="1" Background="White" Width="AUTO"></Grid>
+                    <Grid Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="AUTO" ></ColumnDefinition>
+                            <ColumnDefinition Width="AUTO" ></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <Image Grid.RowSpan="2" Name="CompaniesIMG" Source="/images/PikPng.com_business-icon-png_660381.png" Height="70" VerticalAlignment="Center" Margin="10,2,0,0"/>
+                        <TextBlock Grid.Column="1" Text="Total Companies:" TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20" FontFamily="fonts/#Dosis" Foreground="White" Height="AUTO" Width="AUTO"/>
+                        <TextBlock Grid.Column="1" Grid.Row="1" Name="TotalCompanies" TextAlignment="Center" Text="1532" TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="30" FontFamily="fonts/#Dosis" Foreground="White" Width="128" Grid.ColumnSpan="2"/>
+                    </Grid>
+                    <Grid Grid.Row="1" VerticalAlignment="Bottom" Height="1" Background="White" Width="AUTO"></Grid>
+                    <Grid Grid.Row="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="AUTO"  ></ColumnDefinition>
+                            <ColumnDefinition Width="AUTO" ></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <TextBlock  Grid.Column="1" Text="Total Profit(7 days):" TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20" FontFamily="fonts/#Dosis" Foreground="White" Height="AUTO" Width="AUTO"  />
+                        <TextBlock Grid.Column="1" Grid.Row="1" Name="TotalProfits" TextAlignment="Center" Text="1532" TextWrapping="Wrap" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="30" FontFamily="fonts/#Dosis" Foreground="White" Width="128" Grid.ColumnSpan="2" />
+                        <Image Grid.RowSpan="2" Name="Profit2IMG" Source="/images/profits (1).png" Height="100" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,8,0,0" ></Image>
+                    </Grid>
                 </Grid>
             </Grid>
             <lvc:CartesianChart Series="{Binding Path=Bars.Series}" Grid.Row="1" Grid.Column="2"></lvc:CartesianChart>
@@ -256,21 +283,21 @@
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0" Grid.RowSpan="6" Background="White"></Grid>
-            <Button Style="{StaticResource NoGlow}" Grid.Column="1" Grid.Row="0" BorderBrush="{x:Null}" Background="{x:Null}" Click="AddRemovebt" Height="150">
+            <Button Style="{StaticResource NoGlow}" Grid.Column="1" Grid.Row="0" BorderBrush="{x:Null}" Background="{x:Null}" Click="AddRemovebt">
                 <StackPanel>
-                    <Image Source="/images/database.png" Stretch="Uniform" Height="100" />
+                    <Image Source="/images/database.png" Stretch="Uniform" Height="100" Name="DBimage"/>
                     <TextBlock FontFamily="fonts/#Dosis" Foreground="White" HorizontalAlignment="Center">Add/Remove</TextBlock>
                 </StackPanel>
             </Button>
-            <Button Style="{StaticResource NoGlow}" Grid.Column="1" Grid.Row="1" BorderBrush="{x:Null}" Background="{x:Null}" Click="Email_Click" Height="150">
+            <Button Style="{StaticResource NoGlow}" Grid.Column="1" Grid.Row="1" BorderBrush="{x:Null}" Background="{x:Null}" Click="Email_Click">
                 <StackPanel>
-                    <Image Source="/images/email.png" Stretch="Uniform" Height="100" />
+                    <Image Source="/images/email.png" Stretch="Uniform" Height="100" Name="Emailimage" />
                     <TextBlock FontFamily="fonts/#Dosis" Foreground="White" HorizontalAlignment="Center">Send Report To Email</TextBlock>
                 </StackPanel>
             </Button>
-            <Button Style="{StaticResource NoGlow}" Grid.Column="1" Grid.Row="2" BorderBrush="{x:Null}" Background="{x:Null}" Click="Pdf_Click" Height="150">
+            <Button Style="{StaticResource NoGlow}" Grid.Column="1" Grid.Row="2" BorderBrush="{x:Null}" Background="{x:Null}" Click="Pdf_Click">
                 <StackPanel>
-                    <Image Source="/images/icon-pdf-6.jpg" Stretch="Uniform" Height="100" />
+                    <Image Source="/images/icon-pdf-6.jpg" Stretch="Uniform" Height="100" Name="PDFimage"/>
                     <TextBlock FontFamily="fonts/#Dosis" Foreground="White" HorizontalAlignment="Center">Pdf Report</TextBlock>
                 </StackPanel>
             </Button>
