--- a/DashBoardDB/AddRemoveEdIt.xaml
+++ b/DashBoardDB/AddRemoveEdIt.xaml
@@ -245,7 +245,7 @@
                 </Grid.ColumnDefinitions>
                 <Button Grid.Column="1" Click="Close_Click" BorderBrush="{x:Null}" Style="{StaticResource NoGlow}">
                     <Button.Background>
-                        <ImageBrush ImageSource="/images/kisspng-line-angle-pink-m-product-design-symbol-close-window-icon-free-download-png-and-vector-5c6921a8128a99.937018031550393768076.png"/>
+                        <ImageBrush ImageSource="/images/CloseIcon.png"/>
                     </Button.Background>
                 </Button>
                 <TextBlock Text="Would You like to?" TextWrapping="Wrap" FontSize="35" FontFamily="fonts/#Dosis" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center"/>
